--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
   <script src="../Common/webgl-utils.js"></script>
+  <scrip src=" clear.js"></script>
 </head>
 <body>
-  <canvas id="webgl-canvas" width="512" height="512" style="background-color: #0000FF"></canvas>
+  <canvas id="webgl-canvas" width="512" height="512" style="background-color: #0100FF"></canvas>
 </body>
 </html>
