--- a/Assignment-2/index.html
+++ b/Assignment-2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script src="../Common/webgl-utils.js"></script>
-  <scrip src=" clear.js"></script>
+  <script src="clear.js"></script>
 </head>
 <body>
   <canvas id="webgl-canvas" width="512" height="512" style="background-color: #0100FF"></canvas>
