--- a/Assignment-3/cone.html
+++ b/Assignment-3/cone.html
@@ -9,12 +9,12 @@
   
   attribute vec4 vPosition;
 
-  void main() 
+  Cone-vertex-shader() 
   {
        gl_Position = vPosition;
   }
   
-  void main()
+  Cone-fragment-shader()
   {
      gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
   }
