--- a/Assignment-3/cone.html
+++ b/Assignment-3/cone.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <script src="../Common/webgl-utils.js"></script>
-  <script src="clear.js"></script>
+  <script src="cone.js"></script>
   <script src="../Common/initShaders.js"></script>
   <script src="../Common/Cone.js"></script>
   <script src="cone.js"></script> 
@@ -19,10 +19,13 @@
   
   <script src="Cone-fragment-shader" type="x-shader/x-fragment">
   
-  Cone-fragment-shader()
+  void main()
   {
      gl_FragColor = vec4(1.0, 0.0, 0.0, 1.0);
   }
+  
+  </script>
+  
 </head>
 <body>
   <canvas id="webgl-canvas" width="512" height="512" style="background-color: #0100FF"></canvas>
