--- a/Assignment-3/cone.html
+++ b/Assignment-3/cone.html
@@ -5,7 +5,7 @@
   <script src="../Common/initShaders.js"></script>
   <script src="../Common/Cone.js"></script>
   <script src="cone.js"></script> 
-  <script src="Cone-vertex-shader" type="x-shader/x-vertex">
+  <script id="Cone-vertex-shader" type="x-shader/x-vertex">
   
   attribute vec4 vPosition;
 
@@ -16,7 +16,7 @@
   
   </script>
   
-  <script src="Cone-fragment-shader" type="x-shader/x-fragment">
+  <script id="Cone-fragment-shader" type="x-shader/x-fragment">
   
   void main()
   {
