--- a/Final/Final_work/Final/index.html
+++ b/Final/Final_work/Final/index.html
@@ -14,4 +14,8 @@
 		<script src="MTLLoader.js"></script>
 		<script src="scripts.js"></script>
 	</body>
+	
+	<body>
+	<canvas id="webgl-canvas" width="512" height="512" style="background-color: #afc7ed"></canvas>
+	</body>
 </html>
