--- a/Final/Final_work/Final/index.html
+++ b/Final/Final_work/Final/index.html
@@ -5,17 +5,14 @@
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
-        </div>		
-	</head>
-	<body>
+
 		<script src="three.min.js"></script>
 		<script src="OrbitControls.js"></script>
 		<script src="OBJLoader.js"></script>
 		<script src="MTLLoader.js"></script>
+			
+	</head>
+	<body onload="animate();">
 		<script src="scripts.js"></script>
-	</body>
-	
-	<body>
-	<canvas id="webgl-canvas" width="512" height="512" style="background-color: #afc7ed"></canvas>
 	</body>
 </html>
